k8s/underwriting-deployment-v2.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: loan-underwriting-service-v2
  namespace: loan-mesh
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: underwriting-service
      version: v2
  template:
    metadata:
      labels:
        app: underwriting-service
        version: v2
    spec:    
      containers:
        - name: underwriting-service
          image: loan/underwriting-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
