k8s/underwriting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-underwriting-service
  namespace: loan-mesh
spec:
  selector:
    app: underwriting-service   
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
