k8s/underwriting-destination.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: underwriting-destination
  namespace: loan-mesh
spec:
  host: loan-underwriting-service   
  subsets:
  - name: v1
    labels:
      version: v1  
  - name: v2
    labels:
      version: v2
